2006-07-25	Alexander V. Lukyanov <lav@yars.free.net>

	* Makefile.am: use libtool.

2006-07-22  Nix  <nix@esperi.org.uk>

        Synch with gnulib-20060722.

        * Makefile.am (liblib_a_SOURCES): Add new files needed by
        gnulib synch.
        * argmatch.c: New, from gnulib.
        * argmatch.h: Likewise.
        * error.c: Likewise.
        * error.h: Likewise.
        * exit.h: Likewise.
        * exitfail.c: Likewise.
        * exitfail.h: Likewise.
        * filemode.h: Likewise.
        * human.h: Likewise.
        * intprops.h: Likewise.
        * modechange.h: Likewise.
        * quote.c: Likewise.
        * quote.h: Likewise.
        * quotearg.c: Likewise.
        * quotearg.h: Likewise.
        * stat-macros.h: Likewise.
        * stdbool_.h: Likewise.
        * strtoimax.c: Likewise.
        * strtoull.c: Likewise.
        * strtoumax.c: Likewise.
        * verify.h: Likewise.
        * xalloc-die.c: Likewise.
        * xalloc.h: Likewise.
        * xmalloc.c: Likewise.
        * xstrtol.h: Likewise.
        * xstrtoumax.c: Likewise.

        * filemode.c: Moved from src/. Synched.
        * human.c: Likewise.
        * modechange.c: Likewise.
        * xstrtol.c: Likewise.
        * xstrtoul.c: Likewise.